fixes navs on ie

--- a/app/assets/stylesheets/modules/variables.scss
+++ b/app/assets/stylesheets/modules/variables.scss
@@ -1,4 +1,4 @@
-// colors --------------------------------------
+// Colors --------------------------------------
 $white        : #f5f5f5;
 $gray         : rgba(128, 128, 128, .2);
 $medium-gray  : rgba(192, 192, 192, .35);
@@ -13,3 +13,9 @@ $layout-padding : 20px;
 $layout-margin  : 10px;
 
 $light-border: solid 1px $medium-gray;
+
+// Mixins --------------------------------------
+@mixin opacity($opacity) {
+  filter: unquote("progid:DXImageTransform.Microsoft.Alpha(Opacity=#{round($opacity * 100)})");
+  opacity: $opacity;
+}
